name:                parallel-concurrent-haskell
version:             0.1.0.0
homepage:            https://github.com/tz70s/parallel-concurrent-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Tzu-Chiao Yeh
maintainer:          su3g4284zo6y7@gmail.com
copyright:           Copyright (c) 2019 Tzu-Chiao Yeh
category:            Parallelism, Concurrency
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parallel-concurrent-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel

executable ch2-fib-eval
  hs-source-dirs:      src/parallel/ch2
  main-is:             FibEval.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel
  ghc-options:         -Wall -threaded -O2 -rtsopts -eventlog
